# monero_cpp

./: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  setup.py
examples/: daemon_status.py  example_usage.py
monero_cpp/: bindings.cpp
